--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Thesis Project
-logo: /images/Picture1.png
+title: Demetra Project
+logo: /images/demetraLogo.png
 #description: This work was co-funded 
 #show_downloads: true
 theme: jekyll-theme-minimal 
